# foxy_utils

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
example/: CMakeLists.txt  main.cpp
include/foxy_utils/: json.hpp  macros.hpp
include/koyote/: helpers.hpp  macros.hpp  math.hpp  utilities.hpp  uuid.hpp
include/koyote/control_flow/: for_each.hpp
include/koyote/io/: byte_io.hpp  file.hpp  range.hpp
include/koyote/misc/: event.hpp  log.hpp  time.hpp
include/koyote/time/: benchmark.hpp  game_loop.hpp  stopwatch.hpp  time.hpp
include/koyote/types/: json.hpp  packed_array.hpp  reference_count.hpp  singleton.hpp  std.hpp  uuid.hpp
koyote/: pimpl_impl.hpp  utilities.hpp
koyote/core/: log.cpp  log.hpp  ring_buffer.cpp  ring_buffer.hpp  std.cpp  std.hpp
koyote/internal/: includes.hpp
src/: CMakeLists.txt
src/foxy_utils/: foxy_error.ixx  foxy_event.ixx  foxy_helpers.ixx  foxy_log.ixx  foxy_main.ixx
src/foxy_utils/control_flow/: for_each.ixx  foxy_flow.ixx
src/foxy_utils/io/: byte.ixx  file.ixx  foxy_io.ixx
src/foxy_utils/ranges/: contains.ixx  foxy_ranges.ixx
src/foxy_utils/time/: benchmark.ixx  foxy_time.ixx  game_loop.ixx  stopwatch.ixx  time.ixx
src/foxy_utils/types/: foxy_types.ixx  packed_array.ixx  packed_map.ixx  reference_count.ixx  singleton.ixx
src/koyote/: event.ixx  file.cpp  koyote_log.ixx  log.cpp  log.ixx  pch.hpp  time.cpp
src/koyote/control_flow/: flow.ixx  for_each.hpp  for_each.ixx  ifopt.hpp
src/koyote/core/: log.cpp  log.hpp  macros.hpp  std.cpp  std.hpp  time.cpp  time.hpp
src/koyote/internal/: pch.hpp
src/koyote/io/: byte.ixx  byte_io.hpp  byte_range.hpp  file.cpp  file.hpp  file.ixx  io.ixx  json.ixx  koyote_io.ixx
src/koyote/ranges/: contains.ixx  koyote_ranges.ixx
src/koyote/time/: benchmark.ixx  game_loop.ixx  stopwatch.ixx  time.ixx
src/koyote/types/: koyote_types.ixx  packed_array.hpp  packed_array.ixx  reference_count.ixx  singleton.hpp  singleton.ixx
